# project_template

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/dl_model/: README.md  requirements.txt
examples/dl_model/#{model}/model/: #{model_class}.py
examples/dl_model/docs/md/: note.md
examples/dl_model/scripts/: build_conda_env.sh
project_template/: constants.py  create.py  database.py  delete.py  generate.py  instantiation.py  scan.py  test.py  util.py
project_template/app/: project_template_command.py
scripts/: build.sh  clear_cache.sh  install.sh
test/unittests/: test_database.py  test_instantiation.py  test_scan.py  test_util.py
